--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
        "'Braund, Mr. Owen Harris'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
        "'Braund, Mr. Owen Harris'"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
        "6"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
        "','"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
        "'M'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "10"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
        "'Mr'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1441,7 @@
        "Name: Name, Length: 891, dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1624,7 @@
        "20                                     Masselmani, Mrs. Fatima     Mrs"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1635,12 +1635,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Title\n",
        "Mr              517\n",
        "Miss            182\n",
        "Mrs             125\n",
@@ -1648,20 +1649,20 @@
        "Dr                7\n",
        "Rev               6\n",
        "Mlle              2\n",
-       "Col               2\n",
        "Major             2\n",
-       "Jonkheer          1\n",
-       "Ms                1\n",
-       "Lady              1\n",
-       "Don               1\n",
-       "Capt              1\n",
-       "Mme               1\n",
-       "Sir               1\n",
+       "Col               2\n",
        "the Countess      1\n",
-       "Name: Title, dtype: int64"
+       "Capt              1\n",
+       "Ms                1\n",
+       "Sir               1\n",
+       "Lady              1\n",
+       "Mme               1\n",
+       "Don               1\n",
+       "Jonkheer          1\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1672,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1760,7 @@
        "760              0      0  110152  86.5   B77        S  the Countess  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1800,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1810,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1820,18 +1821,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Gender\n",
        "male      577\n",
        "female    314\n",
-       "Name: Gender, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,18 +1844,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Gender\n",
        "male      0.647587\n",
        "female    0.352413\n",
-       "Name: Gender, dtype: float64"
+       "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,18 +1867,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "Gender\n",
        "male      0.647587\n",
        "female    0.352413\n",
-       "Name: Gender, dtype: float64"
+       "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1898,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1910,7 +1914,7 @@
        "Name: Survived, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,7 +1934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1955,7 @@
        "233"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1977,7 @@
        "468"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1986,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1999,7 @@
        "0.7867564534231201"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2015,7 +2019,7 @@
        "(0.6475869809203143, 0.35241301907968575)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2028,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2037,7 +2041,7 @@
        "(0.7420382165605095, 0.18890814558058924)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2063,7 @@
        "0.7867564534231202"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2078,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2116,28 +2120,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>female</th>\n",
-       "      <td>27.915709</td>\n",
+       "      <td>27.92</td>\n",
        "      <td>Miss</td>\n",
-       "      <td>0.691083</td>\n",
+       "      <td>0.69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>male</th>\n",
-       "      <td>30.726645</td>\n",
+       "      <td>30.73</td>\n",
        "      <td>Mr</td>\n",
-       "      <td>0.814558</td>\n",
+       "      <td>0.81</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         mean_age most_frequent_title  no_cabin_info\n",
-       "Gender                                              \n",
-       "female  27.915709                Miss       0.691083\n",
-       "male    30.726645                  Mr       0.814558"
+       "        mean_age most_frequent_title  no_cabin_info\n",
+       "Gender                                             \n",
+       "female     27.92                Miss           0.69\n",
+       "male       30.73                  Mr           0.81"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,7 +2151,7 @@
     "                'most_frequent_title':pd.NamedAgg('Title', lambda t : t.mode()),\n",
     "                'no_cabin_info':pd.NamedAgg('Cabin', lambda c : c.isna().sum() / c.size)}\n",
     "\n",
-    "df.groupby('Gender').agg(**aggregations)"
+    "df.groupby('Gender').agg(**aggregations).round(2)"
    ]
   },
   {
@@ -2164,7 +2168,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#999; background:#fff;\">\n",
-    "Created with Jupyter, delivered by Fastly, rendered by Rackspace.\n",
+    "Created with Jupyter.\n",
     "</footer>"
    ]
   }
