boston to diabetes

--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -699,7 +699,7 @@
    "metadata": {},
    "source": [
     "### *Esercizio 3*\n",
-    "Ripetere quanto visto fin qui lavorando sul dataset *boston*. Utilizzare KNN per la regressione (*KNeighborsRegressor*) e il *mean absolute error* come metrica di valutazione."
+    "Ripetere quanto visto fin qui lavorando sul dataset *diabetes*. Utilizzare KNN per la regressione (*KNeighborsRegressor*) e il *mean absolute error* come metrica di valutazione."
    ]
   },
   {
@@ -711,7 +711,7 @@
     "from sklearn.neighbors import KNeighborsRegressor as KNN\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "boston = datasets.load_boston()\n",
+    "diabetes = datasets.load_diabetes()\n",
     "\n",
     "#FILL ME"
    ]
